Random try to fix backside-visibility bug on scoring

--- a/stylesheets/game.styl
+++ b/stylesheets/game.styl
@@ -46,6 +46,7 @@
       transform-origin center center
       perspective 2000px
       backface-visibility hidden
+      overflow visible
 
       for row in 1 2 3
         &:nth-child({row})
